--- a/Loeng 3/style.css
+++ b/Loeng 3/style.css
@@ -12,6 +12,7 @@ body {background-image: url("newspaper.jpg");
     margin-right: auto;
     background-color: #cccccc;   
     font-family: 'Merriweather', serif; 
+    font-size: larger;
 }
 
 .uudised {
@@ -19,10 +20,10 @@ body {background-image: url("newspaper.jpg");
     display: flex;
     margin-left: 15%;
     margin-right: 15%;
-    padding-top: 50px;
+    padding-top: 20px;
     padding-left: 15px;
     padding-right: 15px;
-    padding-bottom: 50px;
+    padding-bottom:40px;
     font-family: 'Merriweather', serif;
 }
 
