--- a/Loeng03/style.css
+++ b/Loeng03/style.css
@@ -1,7 +1,7 @@
 body {background-image: url("newspaper.jpg");
     background-color: #cccccc;
     background-size: auto;
-    background background-repeat: no-repeat;   
+    background-repeat: no-repeat;   
 }
 
 .pealkiri {
