--- a/Matkaklubi/Styles.css
+++ b/Matkaklubi/Styles.css
@@ -220,13 +220,13 @@ h4 {
     margin-left: 56px;
     margin-right: 56px;
     margin-bottom: 56px;
-    height: 170px
-    
+    height: 170px;
 }
 
 .jalus>nav {
     display: flex;
     justify-content: space-between;
+    color: black;
 }
 
 .logo {
@@ -258,12 +258,13 @@ h4 {
     align-items: center;
     padding-top: 30px;
     padding-right: 30px;
-    color: #000000;
+    color: black;
 }
 
 .parem-pool-alumine>a {
     margin-left: 20px;
     text-decoration: none;
+    color: #0B0B0B;
 }
 
 .jalus-alumine {
@@ -294,10 +295,8 @@ h4 {
     display: flex;
     padding-bottom: 30px;
     justify-content: space-between;
-    padding-right: 30px;
-    
+    padding-right: 30px; 
 }
-
 
 .copyright {
     font-size: 16.67px;
